--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://dev.lch.cool/test.ipa</string>
+					<string>https://trip.quha.fun/api/test/test.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
